# xstl

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt
src/include/: common.h  csv_reader.h  csv_writter.h  parallel_algorithm.h  sample.h  scoped_thread.h  singleton.h  spin_lock.h  stop_watch.h  swappable.h  thread_guard.h  thread_pool.h  utils.h
test/: sample.cpp  test_parallel_algorithm.cpp  test_singleton.cpp  test_stop_watch.cpp  test_swappable.cpp
